<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Foresight</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="activity_location">Location</string>

    <string name="error_dialog_title">Error</string>
    <string name="fragment_title_today">Today</string>
    <string name="fragment_title_week">Week</string>

    <string name="location_use_current">Use Current Location</string>
    <string name="address_placeholder">Current Location</string>


    <!--region Data-->

    <string name="loading_placeholder_generic">Loading…</string>
    <string name="loading_placeholder_temperature">--º</string>

    <string name="temperature_fmt">%1$.0fº</string>
    <string name="temperature_range_fmt">%1$.0fº/%2$.0fº</string>

    <string name="now_wind_fmt">Wind: %1$.0f %2$s %3$s</string>
    <string name="now_humidity_fmt">Humidity: %1$d%%</string>
    <string name="now_precipitation_probability_fmt">Chance of Precipitation: %1$d%%</string>

    <string name="current_conditions">Current Conditions</string>

    <string name="day_date_format">EEEE</string>
    <string name="time_date_format">hh a</string>

    <!--endregion-->


    <!--region Mock-->

    <string name="mock_temperature">90º</string>
    <string name="mock_location">San Francisco, CA</string>
    <string name="mock_conditions">Partly cloudy throughout the day.</string>
    <string name="mock_time">9:00pm</string>

    <!--endregion-->


    <!--region Units-->

    <string name="compass_bearing_n">N</string>
    <string name="compass_bearing_ne">NE</string>
    <string name="compass_bearing_e">E</string>
    <string name="compass_bearing_se">SE</string>
    <string name="compass_bearing_s">S</string>
    <string name="compass_bearing_sw">SW</string>
    <string name="compass_bearing_w">W</string>
    <string name="compass_bearing_nw">NW</string>
    <string name="compass_bearing_unknown">\?</string>

    <string name="unit_speed_mph">mph</string>
    <string name="unit_speed_m_s">m/s</string>
    <string name="unit_speed_km_h">km/h</string>
    <string name="units_distance_km">km</string>
    <string name="units_distance_miles">mi</string>

    <!--endregion-->


    <!--region Settings-->

    <string name="prefs_section_settings">Settings</string>
    <string name="prefs_title_unit_system">Unit System</string>

    <string name="prefs_section_data_attributions">Data</string>
    <string name="prefs_attribution_data_source">Powered by Forecast</string>

    <string name="prefs_section_icon_attributions">Icons</string>
    <string name="prefs_attribution_icon_moon">Moon by Stephen McKamey</string>
    <string name="prefs_attribution_icon_sleet">Rain And Snow by Stefan Parnarov</string>
    <string name="prefs_attribution_icon_rain">Rain by Kenneth Appiah</string>
    <string name="prefs_attribution_icon_cloudy">Cloud by Ben Rex Furneaux</string>
    <string name="prefs_attribution_icon_fog">Fog by OliM</string>
    <string name="prefs_attribution_app_icon">Drop by Wayne Tyler Sall</string>
    <string name="prefs_attribution_icons_source">from The Noun Project</string>

    <!--endregion-->

</resources>
