<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_now_view"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/condition_neutral">

    <TextView
        android:id="@+id/fragment_now_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_large"
        android:textAppearance="@style/AppTheme.Text.Forecast.Title"
        android:gravity="center"
        android:text="@string/mock_location"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_large">

        <TextView
            android:id="@+id/fragment_now_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/AppTheme.Text.Forecast.BigTemperature"
            android:gravity="center"
            android:text="@string/loading_placeholder_temperature"
            android:drawablePadding="@dimen/gap_large" />

        <ProgressBar
            android:id="@+id/fragment_now_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0"/>

    </FrameLayout>

    <TextView
        android:id="@+id/fragment_now_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/gap_medium"
        android:textAppearance="@style/AppTheme.Text.Forecast.Body.Bold.White"
        android:gravity="center"
        android:text="@string/loading_placeholder_generic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_now_wind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/AppTheme.Text.Forecast.Body.White"
            android:gravity="start"
            android:text="@string/now_wind_fmt"/>

        <TextView
            android:id="@+id/fragment_now_humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/AppTheme.Text.Forecast.Body.White"
            android:gravity="end"
            android:text="@string/now_humidity_fmt"/>

    </LinearLayout>

</LinearLayout>